[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"
[project]
name = "music_brainz_api_micro"
version = "0.1.0"
authors = [
  { name = "Samuel Shiels" },
]
description = "A micro client for MusicBrainz"
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "rest_client_micro",
]
